// Code generated by protoc-gen-orm-service. DO NOT EDIT.
// source: apptest/edge.proto.proto

edition = "2023";

package apptest;

import "apptest/edge.proto";
import "apptest/user_svc.g.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/protobuf-orm/protoc-gen-orm-service/internal/apptest";

service EdgeService {
	// Add creates a new Edge
	rpc Add(EdgeAddRequest) returns (Edge);
	// Get retrieves a Edge
	rpc Get(EdgeGetRequest) returns (Edge);
	// Patch updates an existing Edge
	rpc Patch(EdgePatchRequest) returns (Edge);
	// Erase deletes a Edge
	rpc Erase(EdgeRef) returns (google.protobuf.Empty);
}

message EdgeAddRequest {
	string id = 1;
	UserRef required = 16;
	UserRef nullable = 48;
	UserRef required_immutable = 208;
	UserRef nullable_immutable = 240;
}

message EdgeRef {
	oneof key {
		string id = 1;
	}
}

message EdgeSelect {
	bool all = 1;
	UserSelect required = 16;
	UserSelect nullable = 48;
	UserSelect required_immutable = 208;
	UserSelect nullable_immutable = 240;
}

message EdgeGetRequest {
	EdgeRef ref = 1;
	EdgeSelect select = 2;
}

message EdgePatchRequest {
	EdgeRef target = 1;
	UserRef required = 31;
	UserRef nullable = 95;
	bool nullable_null = 96;
}
